--- a/pom.xml
+++ b/pom.xml
@@ -136,7 +136,7 @@ under the License.
         <!-- most dependencies will be provided by the accumulo installation -->
         <groupId>org.apache.accumulo</groupId>
         <artifactId>accumulo-project</artifactId>
-        <version>2.1.5-SNAPSHOT</version>
+        <version>2.1.4</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
