Prepare to release CachingClassLoaderFactory
* Prevent deployment of example jars
* Add index to top level README
* Fix title in hdfs URL provider README
* Remove VFS factory (keep historical reference in README)

--- a/modules/example-iterators-b/pom.xml
+++ b/modules/example-iterators-b/pom.xml
@@ -28,6 +28,9 @@
     <relativePath>../../pom.xml</relativePath>
   </parent>
   <artifactId>example-iterators-b</artifactId>
+  <properties>
+    <maven.deploy.skip>releases</maven.deploy.skip>
+  </properties>
   <dependencies>
     <dependency>
       <!-- provided by accumulo -->
